--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "concurrently \"nodemon app.js\" \"peerjs --port 3001 \""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "peer": "^0.5.3",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.1"
   },
